@@ -45,14 +45,15 @@
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
 		<p class="agency-error">###MISSING_PASSWORD###</p>
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
-		<input type="password" name="###NAME_PASSWORD###" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" />
+		<input type="password" style="display: none;" />
+		<input type="password" name="###NAME_PASSWORD###" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" autocomplete="off" />
 	</dd>
 
 	<dt>
 		<label for="agency-password_again" class="agency-password-again">###LABEL_PASSWORD_AGAIN### ###REQUIRED_PASSWORD###</label>
 	</dt>
 	<dd>
-		<input type="password" name="###NAME_PASSWORD_AGAIN###" id="agency-password_again" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" value="" />
+		<input type="password" name="###NAME_PASSWORD_AGAIN###" id="agency-password_again" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" value="" autocomplete="off" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_password### -->
 
@@ -692,7 +693,8 @@
 
 	<dt>###LABEL_PASSWORD###</dt>
 	<dd>
-		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" />
+		<input type="password" style="display: none;" />
+		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" autocomplete="off" />
 	</dd>
 
 	<dt>&nbsp;</dt>
@@ -1370,13 +1372,14 @@ The user is informed that a message has been sent to the email address and that 
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
 		<p class="agency-error">###MISSING_PASSWORD###</p>
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
-		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" />
+		<input type="password" style="display: none;" />
+		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" autocomplete="off" />
 	</dd>
 	<dt>
 		<label for="agency-password_again">###LABEL_PASSWORD_AGAIN###</label>
 	</dt>
 	<dd>
-		<input type="password" name="###NAME_PASSWORD_AGAIN###" id="agency-password_again" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" value="" />
+		<input type="password" name="###NAME_PASSWORD_AGAIN###" id="agency-password_again" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" value="" autocomplete="off" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_password### -->
 
@@ -2041,7 +2044,10 @@ The user is informed that a message has been sent to the email address and that 
 	<dt><label for="agency-username">###LABEL_USERNAME###</label></dt>
 	<dd> <input type="text" class="agency-text" id="agency-username" size="40" maxlength="50" title="###LABEL_TOOLTIP_LOGIN_USERNAME###" name="user" value="###FIELD_username###" /> </dd>
 	<dt><label for="agency-pass">###LABEL_PASSWORD###</label></dt>
-	<dd> <input type="password" name="pass" id="agency-password" class="agency-password" size="10"  maxlength="40" title="###LABEL_TOOLTIP_LOGIN_PASSWORD###" value="" /> </dd>
+	<dd>
+		<input type="password" style="display: none;" />
+		<input type="password" name="pass" id="agency-password" class="agency-password" size="10"  maxlength="40" title="###LABEL_TOOLTIP_LOGIN_PASSWORD###" value="" autocomplete="off" />
+	</dd>
 
 	<dt>&nbsp;</dt>
 	<dd>
@@ -2095,7 +2101,10 @@ The user is informed that a message has been sent to the email address and that 
 	<dd><input type="text" class="agency-text" id="agency-username" size="40" maxlength="50" title="###LABEL_TOOLTIP_LOGIN_USERNAME###" name="user" value="###FIELD_username###" /></dd>
 
 	<dt><label for="agency-pass">###LABEL_PASSWORD###</label></dt>
-	<dd><input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_LOGIN_PASSWORD###" value="" /></dd>
+	<dd>
+		<input type="password" style="display: none;" />
+		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_LOGIN_PASSWORD###" value="" autocomplete="off" />
+	</dd>
 
 	<dt>&nbsp;</dt>
 	<dd>
@@ -2130,13 +2139,14 @@ The user is informed that a message has been sent to the email address and that 
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
 		<p class="agency-error">###MISSING_PASSWORD###</p>
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
-		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" />
+		<input type="password" style="display: none;" />
+		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" autocomplete="off" />
 	</dd>
 	<dt>
 		<label for="agency-password_again" class="agency-password-again">###LABEL_PASSWORD_AGAIN###</label>
 	</dt>
 	<dd>
-		<input type="password" name="###NAME_PASSWORD_AGAIN###" id="agency-password_again" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" value="" />
+		<input type="password" name="###NAME_PASSWORD_AGAIN###" id="agency-password_again" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" value="" autocomplete="off" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_password### -->
 
